--- a/content/03.md
+++ b/content/03.md
@@ -28,7 +28,7 @@
     }
     ```
 
-1. As explained previously, the local array `buf` will be placed on the stack (assuming 32-bit memory addressing and 1-byte chars).
+1. As explained previously, the local array `buffer` will be placed on the stack (assuming 32-bit memory addressing and 1-byte chars).
 
     ![buf](buf.png)
 
@@ -92,7 +92,7 @@
     ```
 
     ```shell
-    python -c "import sys; sys.stdout.buffer.write(N * b'\x41' + b'\xad\xde\xe1\xfe')" > payload
+    python3 -c "import sys; sys.stdout.buffer.write(N * b'\x41' + b'\xad\xde\xe1\xfe')" > payload
     ```
 
 1. We can get the address of the target function in `gdb` with `disas win` or by inspecting the symbol table
