Fix typos and task file permissions

--- a/content/01.md
+++ b/content/01.md
@@ -33,7 +33,7 @@
 1. Use `file` and `readelf -h` to obtain information about the resulting `a.out` and answer the questions, showing the relevant output:
     - Would this binary work regardless of the memory location where it gets loaded in runtime?
     - Is debugging information included in the binary?
-    - Are needed library code (e.g., `printf` code) included in the binary?
+    - Is needed library code (e.g., `printf` code) included in the binary?
     - Will memory addressing within the binary use big-endian or little-endian.
 
 1. List dynamic dependencies of the binary with `ldd`
