--- a/content/04.md
+++ b/content/04.md
@@ -27,6 +27,12 @@ int main() {
 
 This time, there is no `win` function to jump to, but we can use our own [shellcode](http://shell-storm.org/shellcode/files/shellcode-811.html) and jump to it.
 
+1. Install needed dependency
+
+    ```bash
+    sudo apt install gcc-multilib
+    ```
+
 1. A precompiled 32-bit binary of the above code is also provided, compiled with the same options to make exploitation possible.
 
     ```bash
